--- a/khan-exercises/exercises/recognizing_rays_lines_and_line_segments.html
+++ b/khan-exercises/exercises/recognizing_rays_lines_and_line_segments.html
@@ -43,7 +43,7 @@
                     <div class="solution" data-tt="question2">Lijnstuk</div>
                     <ul class="choices" data-category="true">
                         <li data-tt="question2">Lijnstuk</li>
-                        <li data-tt="question3">Halve lijn</li>
+                        <li data-tt="question3">Halfrechte</li>
                         <li data-tt="question4">Lijn</li>
                     </ul>
 
@@ -62,15 +62,15 @@
                         </div>
                     </div>
 
-                    <div class="solution" data-tt="question3">Halflijn</div>
+                    <div class="solution" data-tt="question3">Halfrechte</div>
                     <ul class="choices" data-category="true">
                         <li data-tt="question2">Lijnstuk</li>
-                        <li data-tt="question3">Halflijn</li>
+                        <li data-tt="question3">Halfrechte</li>
                         <li data-tt="question4">Lijn</li>
                     </ul>
                     <div class="hints">
                         <p data-tt="hint3">De figuur is een-dimensionaal en heeft een eindpunt. Het gaat echter oneindig door in de andere richting.</p>
-                        <p data-tt="hint4">Therefore, this figure is a <em>halflijn</em>.</p>
+                        <p data-tt="hint4">Daarom is deze figuur een <em>halfrechte</em>.</p>
                     </div>
                 </div>
 
@@ -87,7 +87,7 @@
                     <div class="solution" data-tt="question4">Lijn</div>
                     <ul class="choices" data-category="true">
                         <li data-tt="question2">Lijnstuk</li>
-                        <li data-tt="question3">Halflijn</li>
+                        <li data-tt="question3">Half rechte</li>
                         <li data-tt="question4">Lijn</li>
                     </ul>
                     <div class="hints">
