--- a/khan-exercises/exercises/shaded_areas.html
+++ b/khan-exercises/exercises/shaded_areas.html
@@ -144,7 +144,7 @@
             <div class="problems">
                 <div>
                     <div class="question">Hoe groot is de oppervlakte van het donkere gebied?</div>
-                    <div class="extra-info">(Afronden op honderdsten.)</div>
+                    <div class="extra-info">(Afronden op honderdsten)</div>
                     <div class="solution" data-inexact data-max-error="0.01" data-type="decimal"><var>SHADED_AREA</var></div>
                     <div class="graphie" id="shapes">
                         var g = init({ range: [[-14, 14], [-14, 14]], scale: [11, 11] });
