--- a/khan-exercises/exercises/understanding_decimals_place_value.html
+++ b/khan-exercises/exercises/understanding_decimals_place_value.html
@@ -370,7 +370,7 @@
                 <span data-if="THOUSANDTHS !== 0">\color{brown}{<var>THOUSANDTHS</var>}</span>
                 }
             </code>
-            is the same as
+            is hetzelfde als
             <code>\large{
                 <span data-if="THOUSANDS !== 0">\color{<var>PINK</var>}{<var>THOUSANDS</var>000} + </span>
                 <span data-if="HUNDREDS !== 0">\color{<var>ORANGE</var>}{<var>HUNDREDS</var>00} + </span>
@@ -382,65 +382,65 @@
             }</code>.
         </p>
         <p data-if="THOUSANDS !== 0" data-tt="hint2">
-            <code>\large{\color{<var>PINK</var>}{<var>THOUSANDS</var>000}}</code> is the same as <code>\large{\color{<var>PINK</var>}{<var>THOUSANDS</var>}}</code>
-            <var>plural( "thousand", THOUSANDS )</var>, the place value four places to the left of the decimal point.
+            <code>\large{\color{<var>PINK</var>}{<var>THOUSANDS</var>000}}</code> is hetzelfde als <code>\large{\color{<var>PINK</var>}{<var>THOUSANDS</var>}}</code>
+            <var>plural( "duizendtal", THOUSANDS )</var>, op de plaats vier getallen links van het decimaalteken.
         </p>
         <p data-else data-tt="hint3">
-            Because there is no number in the <span class="hint_pink">thousands</span> place, you don't need any <span class="hint_pink">thousands</span>.
+            Omdat er geen getal staat op de plaats van de <span class="hint_pink">duizendtallen</span> selecteer je geen <span class="hint_pink">duizendtallen</span>.
         </p>
         <p data-if="HUNDREDS !== 0" data-tt="hint4">
-            <code>\large{\color{<var>ORANGE</var>}{<var>HUNDREDS</var>00}}</code> is the same as <code>\large{\color{<var>ORANGE</var>}{<var>HUNDREDS</var>}}</code>
-            <var>plural( "hundred", HUNDREDS )</var>, the place value three places to the left of the decimal point.
+            <code>\large{\color{<var>ORANGE</var>}{<var>HUNDREDS</var>00}}</code> is hetzelfde als <code>\large{\color{<var>ORANGE</var>}{<var>HUNDREDS</var>}}</code>
+            <var>plural( "honderdtal", HUNDREDS )</var>, op de plaats drie getallen links van het decimaalteken.
         </p>
         <p data-else data-tt="hint5">
-            Because the <span class="hint_orange">hundreds</span> place is <code class="hint_orange">\large{0}</code>, you don't need any <span class="hint_orange">hundreds</span>.
+            Omdat er geen getal staat op de plaats van de <span class="hint_orange">honderdtallen</span> een <code class="hint_orange">\large{0}</code> staat, heb je geen <span class="hint_orange">honderdtallen</span> nodig.
         </p>
         <p data-if="TENS !== 0" data-tt="hint6">
-            <code>\large{\color{<var>GREEN</var>}{<var>TENS</var>0}}</code> is the same as <code>\large{\color{<var>GREEN</var>}{<var>TENS</var>}}</code>
-            <var>plural( "ten", TENS )</var>, the place value two places to the left of the decimal point.
+            <code>\large{\color{<var>GREEN</var>}{<var>TENS</var>0}}</code> is hetzelfde als <code>\large{\color{<var>GREEN</var>}{<var>TENS</var>}}</code>
+            <var>plural( "tiental", TENS )</var>, op de plaats twee getallen links van het decimaalteken.
         </p>
         <p data-else data-tt="hint7">
-            Because the <span class="hint_green">tens</span> place is <code class="hint_green">\large{0}</code>, you don't need any <span class="hint_green">tens</span>.
+           	Omdat op de plaats van de <span class="hint_green">tientallen</span> een <code class="hint_green">\large{0}</code> staat, heb je geen <span class="hint_green">tientallen</span> nodig.
         </p>
         <p data-if="ONES !== 0" data-tt="hint8">
-            <code>\large{\color{<var>BLUE</var>}{<var>ONES</var>}}</code> is the same as <code>\large{\color{<var>BLUE</var>}{<var>ONES</var>}}</code>
-            <var>plural( "one", ONES )</var>, the place value one place to the left of the decimal point.
+            <code>\large{\color{<var>BLUE</var>}{<var>ONES</var>}}</code> is hetzelfde als <code>\large{\color{<var>BLUE</var>}{<var>ONES</var>}}</code>
+            <var>plural( "eenheid", ONES )</var>, op de plaats links van het decimaalteken.
         </p>
         <p data-else data-tt="hint9">
-            Because the <span class="hint_blue">ones</span> place is <code class="hint_blue">\large{0}</code>, you don't need any <span class="hint_blue">ones</span>.
+            Omdat op de plaats van de <span class="hint_blue">eenheden</span> een <code class="hint_blue">\large{0}</code> staat, heb je geen <span class="hint_blue">eenheden</span> nodig.
         </p>
         <p data-if="TENTHS !== 0" data-tt="hint10">
-            <code>\large{\color{purple}{0.<var>TENTHS</var>}}</code> is the same as <code>\large{\color{purple}{<var>TENTHS</var>}}</code>
-            <var>plural( "tenth", TENTHS )</var>, the place value one place to the right of the decimal point.
+            <code>\large{\color{purple}{0.<var>TENTHS</var>}}</code> is hetzelfde als <code>\large{\color{purple}{<var>TENTHS</var>}}</code>
+            <var>plural( "tiende", TENTHS )</var>, op de plaats rechts van het decimaalteken.
         </p>
         <p data-else data-tt="hint11">
-            Because the <span class="hint_purple">tenths</span> place is <code class="hint_purple">\large{0}</code>, you don't need any <span class="hint_purple">tenths</span>.
+            Omdat op de plaats van de <span class="hint_purple">tienden</span> een <code class="hint_purple">\large{0}</code>staat, heb je geen <span class="hint_purple">tienden</span> nodig.
         </p>
         <p data-if="HUNDREDTHS !== 0" data-tt="hint12">
-            <code>\large{\color{gray}{0.0<var>HUNDREDTHS</var>}}</code> is the same as <code>\large{\color{gray}{<var>HUNDREDTHS</var>}}</code>
-            <var>plural("hundredth", HUNDREDTHS )</var>, the place value two places to the right of the decimal point.
+            <code>\large{\color{gray}{0.0<var>HUNDREDTHS</var>}}</code> is hetzelfde als <code>\large{\color{gray}{<var>HUNDREDTHS</var>}}</code>
+            <var>plural("honderdste", HUNDREDTHS )</var>, op de plaats twee getallen rechts van het decimaalteken. 
         </p>
         <p data-else data-tt="hint13">
-            Because the <span class="hint_gray">hundreds</span> place is <code class="hint_gray">\large{0}</code>, you don't need any <span class="hint_gray">hundreds</span>.
+            Omdat op de plaats van de <span class="hint_gray">honderdsten</span> een <code class="hint_gray">\large{0}</code> staat, heb je geen <span class="hint_gray">honderdsten</span> nodig.
         </p>
         <p data-if="THOUSANDTHS !== 0" data-tt="hint14">
-            <code>\large{\color{#a52a2a}{0.00<var>THOUSANDTHS</var>}}</code> is the same as <code>\large{\color{#a52a2a}{<var>THOUSANDTHS</var>}}</code>
-            <var>plural("thousandth", THOUSANDTHS )</var>, the place value three places to the right of the decimal point.
+            <code>\large{\color{#a52a2a}{0.00<var>THOUSANDTHS</var>}}</code> is hetzelfde als <code>\large{\color{#a52a2a}{<var>THOUSANDTHS</var>}}</code>
+            <var>plural("duizendste", THOUSANDTHS )</var>, op de plaats drie getallen rechts van het decimaalteken.
         </p>
         <!-- no data-else for thousandths since they're only zero if we're dealing with a money problem -->
         <p data-tt="hint15">
-            Therefore you need
-            <span data-if="THOUSANDS !== 0"><code>\large{\color{<var>PINK</var>}{<var>THOUSANDS</var>}}</code> <var>plural( "thousand", THOUSANDS )</var>, </span>
-            <span data-if="HUNDREDS !== 0"><code>\large{\color{<var>ORANGE</var>}{<var>HUNDREDS</var>}}</code> <var>plural( "hundred", HUNDREDS )</var>, </span>
-            <span data-if="TENS !== 0"><code>\large{\color{<var>GREEN</var>}{<var>TENS</var>}}</code> <var>plural( "ten", TENS )</var>, </span>
-            <span data-if="ONES !== 0"><code>\large{\color{<var>BLUE</var>}{<var>ONES</var>}}</code> <var>plural( "one", ONES )</var>, </span>
-            <span data-if="TENTHS !== 0"><code>\large{\color{purple}{<var>TENTHS</var>}}</code> <var>plural( "tenth", TENTHS )</var>, </span>
+            Voor dit getal heb je dus nodig:
+            <span data-if="THOUSANDS !== 0"><code>\large{\color{<var>PINK</var>}{<var>THOUSANDS</var>}}</code> <var>plural( "duizendtal", THOUSANDS )</var>, </span>
+            <span data-if="HUNDREDS !== 0"><code>\large{\color{<var>ORANGE</var>}{<var>HUNDREDS</var>}}</code> <var>plural( "honderdtal", HUNDREDS )</var>, </span>
+            <span data-if="TENS !== 0"><code>\large{\color{<var>GREEN</var>}{<var>TENS</var>}}</code> <var>plural( "tiental", TENS )</var>, </span>
+            <span data-if="ONES !== 0"><code>\large{\color{<var>BLUE</var>}{<var>ONES</var>}}</code> <var>plural( "eenheid", ONES )</var>, </span>
+            <span data-if="TENTHS !== 0"><code>\large{\color{purple}{<var>TENTHS</var>}}</code> <var>plural( "tiende", TENTHS )</var>, </span>
             <span data-if="THOUSANDTHS === 0" data-unwrap>
-                and <code>\large{\color{gray}{<var>HUNDREDTHS</var>}}</code> <var>plural( "hundredth", HUNDREDTHS )</var>.
+                en <code>\large{\color{gray}{<var>HUNDREDTHS</var>}}</code> <var>plural( "honderdste", HUNDREDTHS )</var>.
             </span>
             <span data-else data-unwrap data-tt="hint16">
-                <span data-if="HUNDREDTHS !== 0"><code>\large{\color{gray}{<var>HUNDREDTHS</var>}}</code> <var>plural( "hundredth", HUNDREDTHS )</var>, </span>
-                and <code>\large{\color{#a52a2a}{<var>THOUSANDTHS</var>}}</code> <var>plural( "thousandth", THOUSANDTHS )</var>.
+                <span data-if="HUNDREDTHS !== 0"><code>\large{\color{gray}{<var>HUNDREDTHS</var>}}</code> <var>plural( "honderdste", HUNDREDTHS )</var>, </span>
+                en <code>\large{\color{#a52a2a}{<var>THOUSANDTHS</var>}}</code> <var>plural( "duizendste", THOUSANDTHS )</var>.
             </span>
         </p>
     </div>
