--- a/khan-exercises/exercises/reading_tables_2.html
+++ b/khan-exercises/exercises/reading_tables_2.html
@@ -1,169 +1,132 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math graphie word-problems">
+<html data-require="math graphie word-problems">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Reading tables 2</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Tabellen lezen 2</title>
     <script src="../khan-exercise.js"></script>
     <style>
         .reading span {
-            width: 80px;
+            width: 71px;
         }
-
         .reading span:first-child {
-            width: 100px;
+            width: 80px;
         }
     </style>
     <script>
-        function fillInCorrectAnswer(schoolIndex, columnIndex, answer, color) {
+        function fillInCorrectAnswer( schoolIndex, columnIndex, answer, color ) {
             var nth = ":nth-child(" + ( columnIndex + 2 ) + ")";
-            jQuery(".fake_row").eq(schoolIndex).find("span" + nth)
-                    .html(answer)
-                    .css("color", color);
+            $( ".fake_row" ).eq( schoolIndex ).find( "span" + nth )
+                .html( answer )
+                .css( "color", color );
         }
     </script>
 </head>
 <body>
-<div class="exercise">
+    <div class="exercise">
     <div class="vars">
         <var id="INDEX">randRange( 0, 3 )</var>
-        <var id="ROWS" data-tt="array1">[ [ school(1), school(2), school(3), school(4) ], [ person(1), person(2),
-            person(3), person(4) ], [ person(1), person(2), person(3), person(4) ], [ "Alabama", "Michigan", "New York",
-            "Wyoming" ] ][ INDEX ]</var>
-        <var id="COLUMNS" data-tt="array2">[ [ "Groep 3", "Groep 4", "Groep 5", "Totaal" ], [ "Januari",
-            "Februari", "Maart", "Totaal" ], [ "1e kwart", "2e kwart", "3e kwart", "4e kwart", "Totaal" ], [
-            "Q1", "Q2", "Q3", "Q4", "Totaal" ] ][ INDEX ]</var>
+        <var id="ROWS">[ [ school(1), school(2), school(3), school(4) ], [ person(1), person(2), person(3), person(4) ], [ person(1), person(2), person(3), person(4) ], [ "Utrecht", "Gelderland", "Noord-Holland", "Groningen" ] ][ INDEX ]</var>
+        <var id="COLUMNS">[ [ "Groep 3", "Groep 4", "Groep 5", "Totaal" ], [ "Januari", "Februari", "Maart", "Totaal" ], [ "1e kwart", "2e kwart", "3e kwart", "4e kwart", "Totaal" ], [ "1e kwartaal", "2e kwartaal", "3e kwartaal", "4e kwartaal", "Totaal" ] ][ INDEX ]</var>
         <var id="COL_INDEX">randRange( 0, COLUMNS.length - 1 )</var>
         <var id="ROW_INDEX">randRange( 0, ROWS.length - 1 )</var>
         <var id="ENROLLMENTS, ANSWER">
             (function() {
-            var enrollments = [];
-            var classMin = [ 60, 0, 2, 20 ][ INDEX ];
-            var classMax = [ 80, 6, 10, 40 ][ INDEX ];
-            for ( var i = 0; i &lt; ROWS.length; i++ ) {
-            var enroll = randRange( classMin, classMax, COLUMNS.length - 1 );
-            var total = 0;
-            jQuery.each( enroll, function( i, e ) {
-            total += e;
-            });
-            enroll.push( total );
-            enrollments.push( enroll );
-            }
-            var answer = enrollments[ ROW_INDEX ][ COL_INDEX ];
-            enrollments[ ROW_INDEX ][ COL_INDEX ] = "&nbsp;";
-            return [ enrollments, answer ];
+                var enrollments = [];
+                var classMin = [ 60, 0, 2, 20 ][ INDEX ];
+                var classMax = [ 80, 6, 10, 40 ][ INDEX ];
+                for ( var i = 0; i &lt; ROWS.length; i++ ) {
+                    var enroll = randRange( classMin, classMax, COLUMNS.length - 1 );
+                    var total = 0;
+                    $.each( enroll, function( i, e ) {
+                        total += e;
+                    });
+                    enroll.push( total );
+                    enrollments.push( enroll );
+                }
+                var answer = enrollments[ ROW_INDEX ][ COL_INDEX ];
+                enrollments[ ROW_INDEX ][ COL_INDEX ] = "&nbsp;";
+                return [ enrollments, answer ];
             })()
         </var>
-        <var id="PROBLEM" data-tt="array3">[ "toont de inschrijving op vier verschillende basisscholen voor leerlingen uit groep 3 t/m 5",
-         "toont het aantal kippen die verkocht zijn door vier vrienden tussen januari en maart",
-            "geeft het aantal punten weer die gescoord zijn door vier spelers in een benefit basketbalwedstrijd", "toont het aantal zonnepanelen per provincie die het afgelopen jaar ge&iuml;nstalleerd zijn" ][ INDEX ]</var>
-        <var id="HEADER" data-tt="array4">[ "Scholen", "Boeren", "Spelers", "Provincies" ][ INDEX ]</var>
-        <var id="UNIT" data-tt="array5">[ "studenten", "kippen", "punten", "zonnepanelen" ][ INDEX ]</var>
-        <var id="HINT1" data-tt="array6">
+        <var id="PROBLEM">[ "toont de inschrijvingen voor vier basisscholen voor groep 3 t/m 5", "toont de hoeveelheid kippen die vier vrienden tussen januari en maart verkocht hebben", "toont de punten die vier spelers in een benefietwedstrijd gescoord hebben", "toont het aantal zonnepanelen die per provincie ge&iuml;nstalleerd zijn afgelopen jaar" ][ INDEX ]</var>
+        <var id="HEADER">[ "Scholen", "Boeren", "Spelers", "Provincies" ][ INDEX ]</var>
+        <var id="UNIT">[ "studenten", "kippen", "punten", "zonnepanelen" ][ INDEX ]</var>
+        <var id="HINT1">
             (function() {
-            if ( COL_INDEX === COLUMNS.length - 1 ) {
-            return [ "the total number of students at " + ROWS[ ROW_INDEX ] + " Elementary School", "the total number of
-            chickens sold by " + ROWS[ ROW_INDEX ], "the total number of points scored by " + ROWS[ ROW_INDEX ], "the
-            total number of solar panels installed in " + ROWS [ ROW_INDEX ] ][ INDEX ];
-            } else {
-            return [ "the number of " + COLUMNS[ COL_INDEX ] + " students at " + ROWS[ ROW_INDEX ] + " Elementary
-            School", "the number of chickens sold in " + COLUMNS[ COL_INDEX ] + " by " + ROWS[ ROW_INDEX ], "the number
-            of points scored in the " + COLUMNS[ COL_INDEX ] + " by " + ROWS[ ROW_INDEX ], "the number of solar panels
-            installed in " + COLUMNS[ COL_INDEX ] + " in " + ROWS[ ROW_INDEX ] ][ INDEX ];
-            }
+                if ( COL_INDEX === COLUMNS.length - 1 ) {
+                    return [ "het totaal aantal studenten van " + ROWS[ ROW_INDEX ] + " school", "het totaal aantal kippen verkocht door " + ROWS[ ROW_INDEX ], "het totaal aantal punten gescoord door " + ROWS[ ROW_INDEX ], "het totaal aantal zonnepanelen verkocht in " + ROWS [ ROW_INDEX ] ][ INDEX ];
+                } else {
+                     return [ "het aantal " + COLUMNS[ COL_INDEX ] + " studenten van " + ROWS[ ROW_INDEX ], "het aantal kippen verkocht in " + COLUMNS[ COL_INDEX ] + " door " + ROWS[ ROW_INDEX ], "het aantal punten gescoord in het " + COLUMNS[ COL_INDEX ] + " door " + ROWS[ ROW_INDEX ], "het aantal zonnepanelen ge&iuml;nstalleerd in het " + COLUMNS[ COL_INDEX ] + " in " + ROWS[ ROW_INDEX ] ][ INDEX ];}
             })()
         </var>
-        <var id="HINT2" data-tt="array7">[ "The total number of students at " + ROWS[ ROW_INDEX ] + " Elementary
-            School", "The total number of chickens sold by " + ROWS[ ROW_INDEX ], "The total number of points scored by
-            " + ROWS[ ROW_INDEX ], "The total number of solar panels installed in " + ROWS [ ROW_INDEX ] ][ INDEX
-            ]</var>
+        <var id="HINT2">[ "Het totaal aantal studenten van " + ROWS[ ROW_INDEX ], "Het totaal aantal kippen verkocht door " + ROWS[ ROW_INDEX ], "Het totaal aantal punten gescoord door " + ROWS[ ROW_INDEX ], "Het totaal aantal zonnepanelen ge&iuml;nstalleerd in " + ROWS [ ROW_INDEX ] ][ INDEX ]</var>
     </div>
     <div class="problems">
         <div>
-            <p data-tt="hint1">The table below <var>PROBLEM</var>, except one entry is missing.</p>
-
-            <p class="question" data-tt="hint2">What number should go in the empty cell?</p>
-
+            <p>De tabel hieronder <var>PROBLEM</var>, maar er mist &eacute;&eacute;n gegeven.</p>
+            <p class="question">Welk nummer hoort in de lege cel?</p>
             <div class="fake_header reading">
                 <span><var>HEADER</var></span><span data-each="COLUMNS as i, column"><var>column</var></span>
             </div>
             <div class="fake_row reading" data-each="ROWS as i, row">
-                <span><var>row</var></span><span
-                    data-each="ENROLLMENTS[i] as j, enrollment"><var>enrollment</var></span>
+                <span><var>row</var></span><span data-each="ENROLLMENTS[i] as j, enrollment"><var>enrollment</var></span>
             </div>
             <div class="solution" data-type="multiple">
-                <span style="padding-right: 5px" class="sol"><var>ANSWER</var></span> <var>UNIT</var>
+                <span style="padding-right: 5px" class="sol" data-forms="integer"><var>ANSWER</var></span> <var>UNIT</var>
             </div>
 
             <div class="hints">
-                <p data-tt="hint3">The table is missing <var>HINT1</var>.</p>
-
+                <p>De tabel mist <var>HINT1</var>.</p>
                 <div data-if="COL_INDEX === COLUMNS.length - 1" data-unwrap>
                     <div>
-                        <p data-tt="hint4">The table accounts for <span class="hint_orange"><var>ENROLLMENTS[ ROW_INDEX
-                            ].slice( 0, COL_INDEX ).join( "+" )</var></span> <var>UNIT</var>.</p>
-
+                        <p>De tabel bevat al <span class="hint_orange"><var>ENROLLMENTS[ ROW_INDEX ].slice( 0, COL_INDEX ).join( "+" )</var></span> <var>UNIT</var>.</p>
                         <div class="graphie">
-                            jQuery.each( COLUMNS, function( i, c ) {
-                            if ( i !== 0 ) {
-                            jQuery( ".fake_row" ).eq( ROW_INDEX ).find( "span" ).eq( i )
-                            .css( "color", KhanUtil.ORANGE );
-                            }
+                            $.each( COLUMNS, function( i, c ) {
+                                if ( i !== 0 ) {
+                                    $( ".fake_row" ).eq( ROW_INDEX ).find( "span" ).eq( i )
+                                        .css( "color", KhanUtil.ORANGE );
+                                }
                             });
                         </div>
                     </div>
                     <div>
-                        <p data-tt="hint5"><var>HINT2</var> is simply the sum, or <span
-                                class="hint_pink"><var>ANSWER</var></span>.</p>
-
+                        <p><var>HINT2</var> is gewoon de som, of <span class="hint_pink"><var>ANSWER</var></span>.</p>
                         <div class="graphie">
                             fillInCorrectAnswer( ROW_INDEX, COL_INDEX, ANSWER, KhanUtil.PINK );
                         </div>
                     </div>
                 </div>
                 <div data-else data-unwrap>
-                    <div>
-                        <p><var>HINT2</var> is <span class="hint_blue"><var>ENROLLMENTS[ ROW_INDEX ][ COLUMNS.length - 1
-                            ]</var></span>.</p>
-                        </p>
-                        <div class="graphie">
-                            jQuery( ".fake_row" ).eq( ROW_INDEX ).find( "span" ).eq( COLUMNS.length )
+                <div>
+                    <p><var>HINT2</var> is <span class="hint_blue"><var>ENROLLMENTS[ ROW_INDEX ][ COLUMNS.length - 1 ]</var></span>.</p>
+                    <div class="graphie">
+                        $( ".fake_row" ).eq( ROW_INDEX ).find( "span" ).eq( COLUMNS.length )
                             .css( "color", KhanUtil.BLUE );
-                        </div>
                     </div>
-                    <div>
-                        <p data-tt="hint6">The table already accounts for <span class="hint_orange"><var>ENROLLMENTS[
-                            ROW_INDEX ].slice( 0, COL_INDEX ).concat( ENROLLMENTS[ ROW_INDEX ].slice( COL_INDEX + 1,
-                            COLUMNS.length - 1 ) ).join( "+" )</var> =
+                </div>
+                <div>
+                    <p>De tabel bevat al <span class="hint_orange"><var>ENROLLMENTS[ ROW_INDEX ].slice( 0, COL_INDEX ).concat( ENROLLMENTS[ ROW_INDEX ].slice( COL_INDEX + 1, COLUMNS.length - 1 ) ).join( "+" )</var> =
                     <var>ENROLLMENTS[ ROW_INDEX ][ COLUMNS.length - 1 ] - ANSWER</var></span> <var>UNIT</var>.</p>
-
-                        <div class="graphie">
-                            jQuery.each( COLUMNS, function( i, c ) {
+                    <div class="graphie">
+                        $.each( COLUMNS, function( i, c ) {
                             if ( i !== 0 ) {
-                            jQuery( ".fake_row" ).eq( ROW_INDEX ).find( "span" ).eq( i )
-                            .css( "color", KhanUtil.ORANGE );
+                                $( ".fake_row" ).eq( ROW_INDEX ).find( "span" ).eq( i )
+                                    .css( "color", KhanUtil.ORANGE );
                             }
-                            });
-                        </div>
+                        });
                     </div>
-                    <p data-tt="hint7">The missing number must be the difference between <var>HINT2.slice( 0, 1
-                        ).toLowerCase() + HINT2.slice( 1 )</var>, <span class="hint_blue"><var>ENROLLMENTS[ ROW_INDEX ][
-                        COLUMNS.length - 1 ]</var></span>, and the values already accounted for, <span
-                            class="hint_orange"><var>ENROLLMENTS[ ROW_INDEX ][ COLUMNS.length - 1 ] -
-                        ANSWER</var></span>.</p>
-
-                    <div>
-                        <p><span class="hint_blue"><var>ENROLLMENTS[ ROW_INDEX ][ COLUMNS.length - 1 ]</var></span> -
-                            <span class="hint_orange"><var>ENROLLMENTS[ ROW_INDEX ][ COLUMNS.length - 1 ] - ANSWER</var></span>
-                            = <span class="hint_pink"><var>ANSWER</var></span></p>
-
-                        <div class="graphie">
-                            fillInCorrectAnswer( ROW_INDEX, COL_INDEX, ANSWER, KhanUtil.PINK );
-                        </div>
+                </div>
+                <p>Het missende getal is het verschil tussen <var>HINT2.slice( 0, 1 ).toLowerCase() + HINT2.slice( 1 )</var>, <span class="hint_blue"><var>ENROLLMENTS[ ROW_INDEX ][ COLUMNS.length - 1 ]</var></span>, en de waarden die al in de tabel staan, <span class="hint_orange"><var>ENROLLMENTS[ ROW_INDEX ][ COLUMNS.length - 1 ] - ANSWER</var></span>.</p>
+                <div>
+                    <p><span class="hint_blue"><var>ENROLLMENTS[ ROW_INDEX ][ COLUMNS.length - 1 ]</var></span> - <span class="hint_orange"><var>ENROLLMENTS[ ROW_INDEX ][ COLUMNS.length - 1 ] - ANSWER</var></span> = <span class="hint_pink"><var>ANSWER</var></span></p>
+                    <div class="graphie">
+                        fillInCorrectAnswer( ROW_INDEX, COL_INDEX, ANSWER, KhanUtil.PINK );
                     </div>
+                </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    </div>
 </body>
 </html>
