Voltooid deelwoord, nu ook wat sterke werkwoorden

--- a/khan-exercises/exercises/ott.html
+++ b/khan-exercises/exercises/ott.html
@@ -65,7 +65,7 @@
 			<var id="Places">["de bakker", "buiten", "de tuin", "de buren", "het piratenschip"]</var>
 			<var id="Cities">["Amsterdam", "Groningen", "Rotterdam", "Den Haag", "Nijmegen", "Arnhem"]</var>
 			<var id="Viewing">["het schilderij van Van Gogh", "dat oude standbeeld", "zijn fiets", "een konijntje"]</var>
-			<var id="Calling">["de buurman", "het meisje", "de jongen", "de buurvrouw", "de man", "de vrouw", "de dokter", "mijn moeder", "Jennifer", "Amira", "Arnoud", "Jorn", "Sander", "Sanne", "Tijmen", "Ysbrand", "de viking", "de piraat", "de kleuter"]</var>
+						<var id="Calling">["de buurman", "het meisje", "de jongen", "de buurvrouw", "de man", "de vrouw", "de dokter", "mijn moeder", "Jennifer", "Amira", "Arnoud", "Jorn", "Sander", "Sanne", "Jan", "Tijmen", "Ysbrand", "Nadine", "Marta", "Sergio", "Jaime", "Wijnand", "Ronald", "Max", "Minke", "de viking", "de piraat", "de kleuter"]</var>
 			<var id="Working">["het project", "de tekening", "het wiskundehuiswerk", "de voorstelling", "de boomhut", "de presentatie", "ons werkstuk"]</var>
 			<var id="ThirdPlural">["de meisjes", "de jongens", "de buren", "de ouders", "de kleuters", "de volwassenen", "de vikingen", "de piraten"]</var>
 			<var id="Painting">["de muur", "het hek", "mijn grootmoeders vaas", "de schutting van de buurman", "ons fietsenschuurtje", "het piratenschip"]</var>
