Translations of today

--- a/khan-exercises/exercises/factoring_polynomials_by_grouping_1.html
+++ b/khan-exercises/exercises/factoring_polynomials_by_grouping_1.html
@@ -21,7 +21,7 @@
                 </div>
                 <div>
                     <p class="question">
-                        Factor the following expression:
+                        Ontbind de volgende uitdrukking in factoren:
                     </p>
                     <p>
                         <code><var>MATH.format( PROBLEM, "large" )</var></code>
@@ -44,15 +44,15 @@
                 </div>
                 <div class="hints">
                     <p>
-                        Recognize that the expression is of the form
+                        Herken de volgende vorm in de uitdrukking
                         <code><var>MATH.format( "x^2+Bx+C", "normalsize", BLUE )</var></code>
-                        , which can be factored by grouping.
+                        , dat ontbonden kan worden in groepjes van termen.
                     </p>
                     <p>
-                        Find the factors
-                        <code><var>MATH.format( "a", "normalsize", BLUE )</var></code> and
-                        <code><var>MATH.format( "b", "normalsize", BLUE )</var></code> of the value of
-                        <code><var>MATH.format( "C=" + C, "normalsize", BLUE )</var></code> whose sum is the value of
+                        Bepaal de factoren
+                        <code><var>MATH.format( "a", "normalsize", BLUE )</var></code> en
+                        <code><var>MATH.format( "b", "normalsize", BLUE )</var></code> met de waarde
+                        <code><var>MATH.format( "C=" + C, "normalsize", BLUE )</var></code> waarvan de som de waarde is van
                         <code><var>MATH.format( "B=" + B, "normalsize", BLUE )</var></code>.
                     </p>
                     <p>
@@ -60,20 +60,19 @@
                         <code><var>MATH.format( "b=" + b_val, "normalsize", BLUE )</var></code>
                     </p>
                     <p>
-                        Rewrite the middle term of the original equation using these factors to form
-                        two groups.
+                        Herschrijf met behulp van deze factoren de middelste term van de oorspronkelijke vergelijking tot twee groepen.
                     </p>
                     <p>
                         <code><var>MATH.format( "x^2+" + a_val + "x+" + b_val + "x+" + C, "normalsize", BLUE )</var></code>
                     </p>
                     <p>
-                        Factor the first two terms terms and the second two terms.
+                        Ontbind de eerste twee termen en de volgende twee termen in factoren.
                     </p>
                     <p>
                         <code><var>MATH.format( "x(x+" + a_val + ")+" + b_val + "(x+" + a_val + ")", "normalsize", BLUE )</var></code>
                     </p>
                     <p>
-                        Redistribute the common term to get the answer.
+                        Herverdeel de gemeenschappelijke term om het antwoord te krijgen.
                     </p>
                     <p>
                         <code><var>MATH.format( "(x+" + b_val + ")(x+" + a_val + ")", "large", ORANGE )</var></code>
