--- a/khan-exercises/exercises/quadratic_equation.html
+++ b/khan-exercises/exercises/quadratic_equation.html
@@ -54,8 +54,8 @@
 
         <div class="problems">
             <div>
-                <p data-tt="problem1" class="problem">Let <code>f(x) = <var>F_TEXT</var></code>.</p>
-                <p data-tt="question1" class="question">Where does this function intersect the x-axis (i.e. what are the roots or zeroes of <code>f(x)</code>)?</p>
+                <p data-tt="problem1" class="problem">Laat <code>f(x) = <var>F_TEXT</var></code>.</p>
+                <p data-tt="question1" class="question">Waar snijdt deze functie de x-as (d.w.z. wat zijn de nulpunten van <code>f(x)</code>)?</p>
                 <p class="solution"><code><var>quadraticRoots(A, B, C)</var></code></p>
 
                 <ul class="choices" data-none="true" data-show="5">
@@ -70,12 +70,12 @@
 
         <div class="hints">
             <div>
-                <p data-tt="hint1" >The function intersects the x-axis when <code>f(x) = 0</code>, so you need to solve the equation:</p>
+                <p data-tt="hint1" >De functie snijdt de x-as wanneer <code>f(x) = 0</code>,  dus je moet deze vergelijking oplossenon:</p>
                 <p><code><var>F_TEXT</var> = 0</code></p>
             </div>
 
             <div>
-                <p data-tt="hint2" >Use the quadratic formula to solve <code>ax^2 + bx + c = 0</code>:</p>
+                <p data-tt="hint2" >Gebruik de abc-formule om <code>ax^2 + bx + c = 0</code> op te lossen:</p>
                 <p><code>x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}</code></p>
             </div>
 
