--- a/khan-exercises/exercises/scaling_vectors.html
+++ b/khan-exercises/exercises/scaling_vectors.html
@@ -65,7 +65,7 @@
     <div class="problems">
         <div>
             <div class="question">
-                <p data-tt="question1">What is <code><var>SA</var> \vec a</code>?</p>
+                <p data-tt="question1">Wat is <code><var>SA</var> \vec a</code>?</p>
 
                 <div id="graph" class="graphie">
                     graphInit({
@@ -139,11 +139,11 @@
     </div>
 
     <div class="hints">
-        <p data-tt="hint1">Reading from the graph, we see that <code>\vec a = <var>AX</var> \hat\imath + <var>AY</var> \hat\jmath</code>.</p>
+        <p data-tt="hint1">Als we de grafiek aflezen, kunnen we zien dat <code>\vec a = <var>AX</var> \hat\imath + <var>AY</var> \hat\jmath</code>.</p>
         <p><code><var>SA</var> \vec a = <var>SA</var> \cdot (<var>AX</var> \hat\imath + <var>AY</var> \hat\jmath)</code>.</p>
         <p><code>\hphantom{<var>SA</var> \vec a} = (<var>SA</var> \cdot <var>AX</var>) \hat\imath + (<var>SA</var> \cdot <var>AY</var>) \hat\jmath</code>.</p>
         <p><code>\hphantom{<var>SA</var> \vec a} = <var>SA * AX</var> \hat\imath + <var>SA * AY</var> \hat\jmath</code>.</p>
-        <p data-tt="hint2">The vector that matches is <code>\vec <var>ANSL</var></code>.</p>
+        <p data-tt="hint2">De vector die hiermee gepaard gaat is <code>\vec <var>ANSL</var></code>.</p>
     </div>
     </div>
 </body>
