--- a/khan-exercises/exercises/expressions_with_unknown_variables.html
+++ b/khan-exercises/exercises/expressions_with_unknown_variables.html
@@ -66,8 +66,8 @@
         <div class="problems">
             <div>
                 <div class="question">
-                    <p data-tt="question1">If <code><var>ORIGINAL_EXPRESSIONS[ 0 ].join( " + " )</var> = <var>VALUES[ 0 ]</var></code> <span data-if="NUM_EXPRESSIONS === 2">and <code><var>ORIGINAL_EXPRESSIONS[ 1 ].join( " + " )</var> = <var>VALUES[ 1 ]</var></code></span>,</p>
-                    <p data-tt="question2">what is <code><var>QUESTION</var></code>?</p>
+                    <p data-tt="question1">Als <code><var>ORIGINAL_EXPRESSIONS[ 0 ].join( " + " )</var> = <var>VALUES[ 0 ]</var></code> <span data-if="NUM_EXPRESSIONS === 2">en <code><var>ORIGINAL_EXPRESSIONS[ 1 ].join( " + " )</var> = <var>VALUES[ 1 ]</var></code></span>,</p>
+                    <p data-tt="question2">Wat is <code><var>QUESTION</var></code>?</p>
                 </div>
                 <p class="solution"><var>ANSWER</var></p>
             </div>
