--- a/khan-exercises/exercises/factoring_polynomials_1.html
+++ b/khan-exercises/exercises/factoring_polynomials_1.html
@@ -21,7 +21,7 @@
                 <var id="SIMPLELINEAR">-A-B</var>
             </div>
 
-            <p class="problem">Factor the following expression:</p>
+            <p class="problem">Ontbind de volgende uitdrukking in factoren:</p>
             <p class="question"><code><var>plus(SQUARE + "x^2")</var> + <var>plus( LINEAR + "x" )</var> + <var>CONSTANT</var></code></p>
 
             <div class="solution" data-type="set">
@@ -34,7 +34,7 @@
             <div class="hints">
 
                 <div>
-                    <p>When we factor a polynomial, we are basically reversing this process of multiplying linear expressions together:</p>
+                    <p>Wanneer we een polynoom ontbinden in factoren, doen we eigenlijk het omgekeerde van lineaire uitdrukkingen met elkaar vermenigvuldigenWhen:</p>
                     <p><code>
                         \qquad \begin{eqnarray}
                             (x + a)(x + b) \quad&amp;=&amp;\quad xx &amp;+&amp; xb + ax &amp;+&amp; ab \\ \\
@@ -55,23 +55,23 @@
                         \end{eqnarray}
                     </code></p>
                     <p>
-                        The coefficient on the <code>x</code> term is <code class="hint_green"><var>SIMPLELINEAR</var></code>
-                        and the constant term is <code class="hint_blue"><var>SIMPLECONSTANT</var></code>, so to reverse the steps above, we need to find two numbers
-                        that <span class="hint_green">add up to <code><var>SIMPLELINEAR</var></code></span> and <span class="hint_blue">multiply to
-                        <code><var>SIMPLECONSTANT</var></code></span>.
+                        De coëfficiënt voor de <code>x</code>-term is <code class="hint_green"><var>SIMPLELINEAR</var></code>
+                        en de constante term is <code class="hint_blue"><var>SIMPLECONSTANT</var></code>, dus om het omgekeerde te doen moeten we twee getallen vinden die
+                        <span class="hint_green">opgeteld <code><var>SIMPLELINEAR</var></code></span> zijn en <span class="hint_blue">vermenigvuldigd
+                        <code><var>SIMPLECONSTANT</var></code></span> zijn.
                     </p>
                 </div>
 
                 <div>
-                    <p>You can try out different factors of <code class="hint_blue"><var>SIMPLECONSTANT</var></code> to see if you can find two
-                    that satisfy both conditions. If you're stuck and can't think of any, you can also rewrite the conditions as a system of equations and
-                    try solving for <code class="hint_pink">a</code> and <code class="hint_pink">b</code>:</p>
+                    <p>Je kunt verschillende factoren van <code class="hint_blue"><var>SIMPLECONSTANT</var></code> uitproberen om te zien of je
+                    aan beide voorwaarden kan voldoen. Als je vast zit en je kan er geen bedenken, kun je altijd de voorwaarden omschrijven naar een stelselvergelijking en proberen op te lossen voor
+                    <code class="hint_pink">a</code> en <code class="hint_pink">b</code>:</p>
                     <p><code>\qquad \color{<var>PINK</var>}{a} + \color{<var>PINK</var>}{b} = \color{<var>GREEN</var>}{<var>SIMPLELINEAR</var>}</code></p>
                     <p><code>\qquad \color{<var>PINK</var>}{a} \times \color{<var>PINK</var>}{b} = \color{<var>BLUE</var>}{<var>SIMPLECONSTANT</var>}</code></p>
                 </div>
 
                 <div>
-                    <p>The two numbers <code class="hint_pink"><var>-A</var></code> and <code class="hint_pink"><var>-B</var></code> satisfy both conditions:</p>
+                    <p>De twee getallen <code class="hint_pink"><var>-A</var></code> en <code class="hint_pink"><var>-B</var></code> voldoen aan beide voorwaarden:</p>
                     <p><code>
                         \qquad \color{<var>PINK</var>}{<var>-A</var>} + \color{<var>PINK</var>}{<var>-B</var>} =
                         \color{<var>GREEN</var>}{<var>SIMPLELINEAR</var>}
@@ -83,7 +83,7 @@
                 </div>
 
                 <p><b>
-                    So we can factor the expression as: <code>(x <var>A &lt; 0 ? "+" : ""</var> \color{<var>PINK</var>}{<var>-A</var>})
+                    Dus we kunnen de uitdrukking ontbinden als volgt: <code>(x <var>A &lt; 0 ? "+" : ""</var> \color{<var>PINK</var>}{<var>-A</var>})
                     (x <var>B &lt; 0 ? "+" : ""</var> \color{<var>PINK</var>}{<var>-B</var>})</code>
                 </b></p>
 
