--- a/khan-exercises/exercises/solving_quadratics_by_factoring.html
+++ b/khan-exercises/exercises/solving_quadratics_by_factoring.html
@@ -29,7 +29,7 @@
                 <var id="SIMPLELINEAR">-A-B</var>
             </div>
 
-            <p class="problem" data-tt="question1">Determine where <code>f(x)</code> intersects the <code>x</code>-axis.</p>
+            <p class="problem" data-tt="question1">Bereken waar <code>f(x)</code> de <code>x</code>-as snijdt.</p>
             <p class="question"><code>f(x) = <var>plus(SQUARE + "x^2")</var> + <var>plus( LINEAR + "x" )</var> + <var>CONSTANT</var></code></p>
 
             <div class="solution" data-type="set">
@@ -42,13 +42,13 @@
 
             <div class="hints" data-apply="appendContents">
                 <div id="hint1">
-                    <p data-tt="hint1">The two numbers <code><var>-A</var></code> and <code><var>-B</var></code> satisfy both conditions:</p>
+                    <p data-tt="hint1">De twee getallen <code><var>-A</var></code> en <code><var>-B</var></code> voldoen beide aan twee voorwaarden:</p>
                     <p><code><var>-A</var> + <var>-B</var> = <var>SIMPLELINEAR</var></code></p>
                     <p><code><var>-A</var> \cdot <var>-B</var> = <var>SIMPLECONSTANT</var></code></p>
                 </div>
-                <p id="hint2" data-tt="hint2">So <code>(x + <var>-A</var>)(x + <var>-B</var>) = 0</code>.</p>
+                <p id="hint2" data-tt="hint2">Dus <code>(x + <var>-A</var>)(x + <var>-B</var>) = 0</code>.</p>
                 <p id="hint3"><code>x + <var>-A</var> = 0</code> or <code>x + <var>-B</var> = 0</code></p>
-                <p id="hint4" data-tt="hint3">Thus, <code>x = <var>A</var></code> and <code>x = <var>B</var></code> are the solutions.</p>
+                <p id="hint4" data-tt="hint3">Daarom zijn <code>x = <var>A</var></code> and <code>x = <var>B</var></code> de oplossingen.</p>
             </div>
         </div>
 
@@ -60,36 +60,36 @@
                 <var id="LINEAR">SQUARE * ( -2 * A )</var>
                 <var id="SIMPLELINEAR">-2 * A</var>
             </div>
-            <p class="problem" data-tt="question2">Determine where <code>f(x)</code> intersects the x-axis.</p>
+            <p class="problem" data-tt="question2">Bereken waar <code>f(x)</code> de <code>x</code>-asx-axis.</p>
             <p class="question"><code>f(x) = <var>plus( SQUARE + "x^2")</var> + <var>plus( LINEAR + "x" )</var> + <var>CONSTANT</var></code></p>
             <div class="solution" data-type="multiple">
                 <p><code>x = \quad</code><span class="sol"><var>A</var></span></p>
             </div>
             <div class="hints" data-apply="appendContents">
                 <div id="hint1">
-                    <p data-tt="hint4">The number <code><var>-A</var></code> used twice satisfies both conditions:</p>
+                    <p data-tt="hint4">Het getal <code><var>-A</var></code> (twee keer gebruikt) voldoet aan beide voorwaarden:</p>
                     <p><code><var>-A</var> + <var>-A</var> = <var>SIMPLELINEAR</var></code></p>
                     <p><code><var>-A</var> \cdot <var>-A</var> = <var>SIMPLECONSTANT</var></code></p>
                 </div>
-                <p id="hint2" data-tt="hint5">So <code>(x + <var>-A</var>)^2 = 0</code>.</p>
+                <p id="hint2" data-tt="hint5">Dus <code>(x + <var>-A</var>)^2 = 0</code>.</p>
                 <p id="hint3"><code>x + <var>-A</var> = 0</code></p>
-                <p id="hint4" data-tt="hint6">Thus, <code>x = <var>A</var></code> is the solution.</p>
+                <p id="hint4" data-tt="hint6">Daarom is <code>x = <var>A</var></code> de oplossing.</p>
             </div>
         </div>
     </div>
 
     <div class="hints">
         <div>
-            <p data-tt="hint7">The function intersects the <code>x</code>-axis where <code>f(x) = 0</code>, so solve the equation:</p>
+            <p data-tt="hint7">De functie snijdt de <code>x</code>-as waar <code>f(x) = 0</code>. Dus los de vergelijking op:</p>
             <p><code><var>plus( SQUARE + "x^2" )</var> + <var>plus( LINEAR + "x")</var> + <var>CONSTANT</var>=0</code></p>
         </div>
 
         <div data-if="SQUARE > 1">
-            <p data-tt="hint8">Dividing both sides by <var>SQUARE</var> gives:</p>
+            <p data-tt="hint8">Beide kanten delen door <var>SQUARE</var> geeft:</p>
             <p><code>x^2 + <var> plus(SIMPLELINEAR + "x")</var> + <var>SIMPLECONSTANT</var>=0</code></p>
         </div>
 
-        <p data-tt="hint9">The coefficient on the <code>x</code> term is <code><var>SIMPLELINEAR</var></code> and the constant term is <code><var>SIMPLECONSTANT</var></code>, so we need to find two numbers that add up to <code><var>SIMPLELINEAR</var></code> and multiply to <code><var>SIMPLECONSTANT</var></code>.</p>
+        <p data-tt="hint9">De coëfficiënt van de <code>x</code> term is <code><var>SIMPLELINEAR</var></code> en van de de constante term <code><var>SIMPLECONSTANT</var></code>, dus we moeten twee getallen vinden die opgeteld <code><var>SIMPLELINEAR</var></code> zijn en vermenigvuldigd <code><var>SIMPLECONSTANT</var></code> zijn.</p>
     </div>
     </div>
 </body>
