--- a/khan-exercises/exercises/solving_quadratics_by_factoring_2.html
+++ b/khan-exercises/exercises/solving_quadratics_by_factoring_2.html
@@ -29,7 +29,7 @@
                 <var id="SIMPLELINEAR">-A-B</var>
             </div>
 
-            <p class="problem">Determine where <code>f(x)</code> intersects the <code>x</code>-axis.</p>
+            <p class="problem">Bereken waar <code>f(x)</code> de <code>x</code>-as snijdt.</p>
             <p class="question"><code>f(x) = <var>plus(SQUARE + "x^2")</var> + <var>plus( LINEAR + "x" )</var> + <var>CONSTANT</var></code></p>
 
             <div class="solution" data-type="set">
@@ -42,7 +42,7 @@
 
             <div class="hints" data-apply="appendContents">
                 <div id="hint1">
-                    <p>The two numbers <code class="hint_pink"><var>-A</var></code> and <code class="hint_pink"><var>-B</var></code> satisfy both conditions:</p>
+                    <p>De twee getallen <code class="hint_pink"><var>-A</var></code> en <code class="hint_pink"><var>-B</var></code> voldoen aan beide voorwaarden:</p>
                     <p><code>
                         \qquad \color{<var>PINK</var>}{<var>-A</var>} + \color{<var>PINK</var>}{<var>-B</var>} =
                         \color{<var>GREEN</var>}{<var>SIMPLELINEAR</var>}
@@ -53,11 +53,11 @@
                     </code></p>
                 </div>
                 <p id="hint2">
-                    So <code>(x <var>A &lt; 0 ? "+" : ""</var> \color{<var>PINK</var>}{<var>-A</var>})
+                    Dus <code>(x <var>A &lt; 0 ? "+" : ""</var> \color{<var>PINK</var>}{<var>-A</var>})
                     (x <var>B &lt; 0 ? "+" : ""</var> \color{<var>PINK</var>}{<var>-B</var>}) = 0</code>.
                 </p>
-                <p id="hint3"><code>x + <var>-A</var> = 0</code> or <code>x + <var>-B</var> = 0</code></p>
-                <p id="hint4"><b>Thus, <code>x = <var>A</var></code> and <code>x = <var>B</var></code> are the solutions.</b></p>
+                <p id="hint3"><code>x + <var>-A</var> = 0</code> of <code>x + <var>-B</var> = 0</code></p>
+                <p id="hint4"><b>Daarom zijn <code>x = <var>A</var></code> en <code>x = <var>B</var></code> de oplossingen.</b></p>
             </div>
         </div>
 
@@ -69,14 +69,14 @@
                 <var id="LINEAR">SQUARE * ( -2 * A )</var>
                 <var id="SIMPLELINEAR">-2 * A</var>
             </div>
-            <p class="problem">Determine where <code>f(x)</code> intersects the x-axis.</p>
+            <p class="problem">Bereken waar <code>f(x)</code> de <code>x</code>-as snijdt.</p>
             <p class="question"><code>f(x) = <var>plus( SQUARE + "x^2")</var> + <var>plus( LINEAR + "x" )</var> + <var>CONSTANT</var></code></p>
             <div class="solution" data-type="multiple">
                 <p><code>x = \quad</code><span class="sol"><var>A</var></span></p>
             </div>
             <div class="hints" data-apply="appendContents">
                 <div id="hint1">
-                    <p>The number <code class="hint_pink"><var>-A</var></code> used twice satisfies both conditions:</p>
+                    <p>Het getal <code class="hint_pink"><var>-A</var></code> (twee keer gebruikt) voldoet aan beide voorwaarden:</p>
                     <p><code>
                         \qquad \color{<var>PINK</var>}{<var>-A</var>} + \color{<var>PINK</var>}{<var>-A</var>} =
                         \color{<var>GREEN</var>}{<var>SIMPLELINEAR</var>}
@@ -86,16 +86,16 @@
                         \color{<var>BLUE</var>}{<var>SIMPLECONSTANT</var>}
                     </code></p>
                 </div>
-                <p id="hint2">So <code>(x <var>A &lt; 0 ? "+" : ""</var> \color{<var>PINK</var>}{<var>-A</var>})^2 = 0</code>.</p>
+                <p id="hint2">Dus <code>(x <var>A &lt; 0 ? "+" : ""</var> \color{<var>PINK</var>}{<var>-A</var>})^2 = 0</code>.</p>
                 <p id="hint3"><code>x + <var>-A</var> = 0</code></p>
-                <p id="hint4"><b>Thus, <code>x = <var>A</var></code> is the solution.</b></p>
+                <p id="hint4"><b>Daarom is <code>x = <var>A</var></code> de oplossing.</b></p>
             </div>
         </div>
     </div>
 
     <div class="hints">
         <div data-if="SQUARE === 1">
-            <p>The function intersects the <code>x</code>-axis where <code>f(x) = 0</code>, so solve the equation:</p>
+            <p>De functie snijdt de <code>x</code>-as waar <code>f(x) = 0</code> dus los deze vergelijking op:</p>
             <p><code>
                 \qquad
                 <var>plus( SQUARE + "x^2" )</var>
@@ -107,12 +107,12 @@
             </code></p>
         </div>
         <div data-else>
-            <p>The function intersects the <code>x</code>-axis where <code>f(x) = 0</code>, so solve the equation:</p>
+            <p>De functie snijdt de <code>x</code>-as waar <code>f(x) = 0</code>, dus los deze vergelijking op:</p>
             <p><code>\qquad <var>plus( SQUARE + "x^2", LINEAR + "x", CONSTANT )</var> = 0</code></p>
         </div>
 
         <div data-if="SQUARE > 1">
-            <p>Dividing both sides by <code><var>SQUARE</var></code> gives:</p>
+            <p>Beide kanten delen door <code><var>SQUARE</var></code> geeft:</p>
             <p><code>
                 \qquad x^2
                 <var>SIMPLELINEAR &gt;= 0 ? "+" : ""</var>
@@ -124,10 +124,10 @@
         </div>
 
         <p>
-            The coefficient on the <code>x</code> term is <code class="hint_green"><var>SIMPLELINEAR</var></code>
-            and the constant term is <code class="hint_blue"><var>SIMPLECONSTANT</var></code>, so we need to find two numbers
-            that <span class="hint_green">add up to <code><var>SIMPLELINEAR</var></code></span> and <span class="hint_blue">multiply to
-            <code><var>SIMPLECONSTANT</var></code></span>.
+            De coëfficiënt van de <code>x</code>-term is <code class="hint_green"><var>SIMPLELINEAR</var></code>
+            en van de constante term is het <code class="hint_blue"><var>SIMPLECONSTANT</var></code>, dus we moeten twee getallen vinden zo dat ze
+            <span class="hint_green">opgeteld <code><var>SIMPLELINEAR</var></code></span> zijn en <span class="hint_blue">vermenigvuldigd
+            <code><var>SIMPLECONSTANT</var></code></span> zijn.
         </p>
     </div>
     </div>
